--- a/assets/style.css
+++ b/assets/style.css
@@ -31,8 +31,14 @@ h1, h2, h3, h4, h5, h6 {
     cursor: url(images/cursor.cur),progress!important;
 }
 
+.tabContent {
+    display: none;
+    height: 100%;
+    margin-bottom: 50px;
+}
+
 .header {
-    padding: 30px 0;
+    padding: 50px 0;
     background: transparent;
     width: 100%;
     top: 0;
@@ -43,24 +49,52 @@ h1, h2, h3, h4, h5, h6 {
     
 }
 
+/* MEDIA */
+
 .headerMedia {
-    padding-top: 10px;
-    padding-bottom: 30px;
-    padding-right: 30px;
-    padding-left: 30px;
-    background: #333;
-    width: 100%;
-    color: #fff;
+    display: flex;
+    justify-content: space-between;
 }
 
-/* MEDIA */
+#mobileTabLink {
+    display: none;
+    text-align: left;
+    padding-top: 20px;
+}
+
+.mobiletabLinks {
+    padding: 15px 0;
+    border-top: 1px solid white;
+    border-color: #fff3;
+    display: block;
+}
+
+.headerMenu a {
+    color: white;
+    display: block;
+    text-decoration: none;
+}
+
+.headerMenu a.hamburgerIcon {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding: 15px;
+}
+
 .headerMenu {
+    width: 100%;
     display: block;
     float: left;
+    font-size: 15px;
+    font-weight: 700;
+    text-transform: uppercase;
     cursor: url(images/cursor.cur),progress!important;
 }
 
 .iMenu {
+    text-transform: none;
     font-size: 16px;
     margin-left: 10px;
     font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,sans-serif;
@@ -69,12 +103,18 @@ h1, h2, h3, h4, h5, h6 {
 
 .headerCart {
     display: block;
-    float: right;
-    cursor: url(images/cursor.cur),progress!important;
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 15px;
 }
 
 .contMedia {
-    padding: 0;
+    width: 100%;
+    margin: auto;
+    background-color: #222;
+    color: white;
+    padding: 20px;
     cursor: url(images/cursor.cur),progress!important;
     display: none;
 }
@@ -112,12 +152,10 @@ h1, h2, h3, h4, h5, h6 {
     align-items: center;
 }
 
-.nav {
+.tabLink {
     font-size: 18px;
     text-transform: uppercase;
-}
-
-.navLink {
+    border: none;
     display: inline-block;
     vertical-align: top;
     padding: 5px;
@@ -125,21 +163,31 @@ h1, h2, h3, h4, h5, h6 {
     white-space: nowrap;
     color: #333;
     cursor: url(images/cursor.cur),progress!important;
+    font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,sans-serif;
 }
 
-.navLink:hover {
+.tabLink[selected] {
+    font-weight: 700;
+}
+
+.tabLink:hover {
     color: #000;
 }
+
+.home {
+    text-align: center;
+}
+
+.homePageImg {
+    width: 100%;
+    margin-bottom: 20px;
+} 
 
 .shop {
     display: flex;
     justify-content: space-between;
     text-align: center;
     flex-wrap: wrap;
-}
-
-.shopLast {
-    padding-bottom: 100px;
 }
 
 .shopItem {
@@ -203,8 +251,6 @@ h1, h2, h3, h4, h5, h6 {
     opacity: .4;
 }
 
-
-
 .name {
     color: #000;
     font-size: 14.4px;
@@ -219,6 +265,30 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 1.5;
     color: #1a1a1a;
     margin: 0 0 15px 0;
+}
+
+.contacts {
+    text-align: center;
+}
+
+.contacts a {
+    text-decoration: none;
+    color: #000;
+}
+
+.termInfoText {
+    text-align: left;
+    line-height: 1.3;
+    letter-spacing: 1px;
+}
+
+.cart {
+    text-align: left;
+}
+
+.cartHeaderText {
+    font-size: 28px;
+    line-height: 1.3;
 }
 
 .footer {
